# objectlens

./: .editorconfig  .env.example  .gitignore  .objectlens.providers.example.yaml  404.html  AI.md  CNAME  LICENSE  README.md  agents.md  devbox.json  docker-compose.yaml  index.html  justfile  mkdocs.yml  sitemap.xml
architecture/: index.html
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  operations.py  s3_client.py
backend/app/providers/: __init__.py  aws.py  base.py  ceph.py  factory.py  garage.py  registry.py  types.py
backend/app/routers/: activity.py  buckets.py  health.py  index.py  objects.py  provider.py
backend/data/providers/: README.md
backend/tests/: test_bucket_browsing.py  test_ceph_provider_preview.py  test_provider_api.py  test_provider_registry.py
bucket-details/: index.html
ceph-provider/: index.html
chart/: Chart.yaml  values.yaml
dev/: 404.html  index.html  sitemap.xml
development/: index.html
docs/: architecture.md  bucket-details.md  ceph-provider.md  development.md  garage-provider.md  getting-started.md  index.md  mcp-server.md  multi-provider.md  provider-model.md  provider-settings.md  roadmap.md  telemetry.md  user-guide.md
docs/mcp/: overview.md  (+2 more)
example/: .env.example  docker-compose-garage.yaml  docker-compose.yaml
frontend/: Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json
garage-provider/: index.html
getting-started/: index.html
mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
mcp-server/tests/: test_server.py
(+79 files in other folders)
