[project]
name = "objectlens-backend"
version = "0.1.0"
description = "FastAPI backend for ObjectLens"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "boto3>=1.35.90",
    "fastapi>=0.115.6",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
