[project]
name = "objectlens-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for ObjectLens"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.9.1",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]

